--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
 
-$main: #424043;
+$main: #002d68;
+$sub-main: #424043;
 $white: #ffffff;
 
 $primary: $main;
@@ -9,4 +10,9 @@ $primary: $main;
 
 body {
   font-family: 'Josefin Sans', sans-serif;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
