--- a/client/src/components/NavBar/Navbar.scss
+++ b/client/src/components/NavBar/Navbar.scss
@@ -21,3 +21,19 @@
     right: -3px;
   }
 }
+
+.dropdown__avatar {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  padding: 0;
+
+  img {
+    border-radius: 50%;
+  }
+}
+
+.dropdown__menu {
+  top: 45px !important;
+  left: -80px !important;
+}
