--- a/client/src/components/layout/AdminLayout/AdminLayout.scss
+++ b/client/src/components/layout/AdminLayout/AdminLayout.scss
@@ -6,8 +6,9 @@
     height: 100vh;
     .logo {
       text-align: center;
-      padding: 20px 0;
       margin: 0 auto;
+      height: 51px;
+      line-height: 51px;
       img {
         height: 40px;
       }
@@ -29,9 +30,6 @@
 
   .open__sidebar {
     width: 300px;
-    .logo {
-      display: block;
-    }
     .sidebar-menu-item {
       margin-bottom: 10px;
       .icon {
@@ -46,7 +44,9 @@
   .close__sidebar {
     width: auto;
     .logo {
-      display: none;
+      img {
+        height: 30px;
+      }
     }
     .sidebar-menu-item {
       margin-bottom: 0;
@@ -61,8 +61,7 @@
 }
 
 // Dashboard Area
-.dashboard__area {
+.admin__area {
   width: 100%;
   background-color: $light;
-  padding: 10px 15px;
 }
