--- a/client/src/components/admin/Categories/Categories.scss
+++ b/client/src/components/admin/Categories/Categories.scss
@@ -1,6 +1,7 @@
 .list__group {
   border-bottom-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
+
   .list-group-item:last-child {
     border-bottom: none;
   }
@@ -10,6 +11,12 @@
     border-radius: 5px;
     background-color: transparent;
   }
+
+  .category__img {
+    height: 50px;
+    width: 50px;
+    object-fit: cover;
+  }
 }
 
 .list__group__input {
@@ -17,6 +24,21 @@
   button {
     padding-top: 8px;
     padding-bottom: 8px;
+  }
+
+  input {
+    height: 60px;
+  }
+
+  .image__input {
+    border-bottom-right-radius: 0;
+    width: auto;
+  }
+
+  .category__img {
+    height: 60px;
+    width: 100px;
+    object-fit: cover;
   }
 }
 
