--- a/client/src/components/user/Cart/Cart.scss
+++ b/client/src/components/user/Cart/Cart.scss
@@ -7,9 +7,14 @@
     text-transform: uppercase;
   }
 
+  td.price {
+    text-align: right;
+  }
+
   td {
     vertical-align: middle;
     text-align: center;
+    user-select: none;
     &:first-child {
       width: 100px;
       height: 100px;
@@ -25,6 +30,20 @@
       text-align: center;
       display: inline-block;
       margin-top: 5px;
+    }
+    & .btn {
+      border: none;
+    }
+  }
+
+  & .total__calculation {
+    td {
+      height: 10px;
+      &:first-child {
+        text-align: left;
+        font-weight: 600;
+        font-size: 20px;
+      }
     }
   }
 }
