--- a/client/src/components/NavBar/Navbar.scss
+++ b/client/src/components/NavBar/Navbar.scss
@@ -27,13 +27,23 @@
 }
 
 .dropdown__avatar {
-  width: 35px;
-  height: 35px;
   border-radius: 50%;
-  padding: 0;
+  border: none !important;
+  padding: 0 !important;
+  outline: none !important;
+  box-shadow: none !important;
+  background-color: transparent !important;
 
   img {
     border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    object-fit: cover;
+    border: 1px solid $primary;
+  }
+
+  &::after {
+    color: $primary;
   }
 }
 
