--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -4,6 +4,7 @@ $main: #002d68;
 $sub-main: #424043;
 $white: #ffffff;
 $light: #e5f3ff;
+$light-gray: #bbbbbb;
 $orange: #ffa534;
 
 $transition: 0.2s;
