--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -39,3 +39,11 @@ img {
 .loading__color {
   fill: $main !important;
 }
+
+.price__item s {
+  font-size: 12px !important;
+}
+
+.cursor-pointer {
+  cursor: pointer !important;
+}
