--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 $main: #002d68;
 $sub-main: #424043;
@@ -13,8 +13,9 @@ $primary: $main;
 
 @import '~bootstrap/scss/bootstrap';
 
+html,
 body {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Jost', sans-serif;
 }
 
 img {
