--- a/client/src/components/user/Support/Support.scss
+++ b/client/src/components/user/Support/Support.scss
@@ -23,3 +23,11 @@
     font-weight: 500;
   }
 }
+
+@media (max-width: 768px) {
+  .support__area {
+    &::after {
+      background-color: transparent;
+    }
+  }
+}
