--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -54,3 +54,47 @@ img {
 .cursor-pointer {
   cursor: pointer !important;
 }
+
+// swiper
+.home__slider {
+  .swiper-button-next,
+  .swiper-button-prev {
+    width: 40px;
+    height: 40px;
+    background-color: $white;
+    border-radius: 50%;
+    box-shadow: 0 0 10px #333;
+    transition: background-color $transition;
+
+    &:hover {
+      background-color: $primary;
+      &:after {
+        color: $white !important;
+      }
+    }
+  }
+
+  .swiper-button-next:after,
+  .swiper-button-prev:after {
+    font-size: 20px;
+    font-weight: 600;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    color: $primary;
+    transition: color $transition;
+  }
+
+  .swiper-pagination-bullets {
+    bottom: -6px;
+  }
+
+  .swiper-pagination-bullet-active {
+    transition: all $transition;
+    background-color: $primary;
+    width: 20px;
+    border-radius: 3px;
+  }
+}
