footer area end

--- a/client/src/components/user/Category/Category.scss
+++ b/client/src/components/user/Category/Category.scss
@@ -1,6 +1,6 @@
 .categories {
-  & .swiper-pagination-clickable {
-    bottom: -9px;
+  .swiper-pagination-bullets {
+    bottom: -6px !important;
   }
 }
 
