--- a/client/src/components/user/FilterSidebar/FilterSidebar.scss
+++ b/client/src/components/user/FilterSidebar/FilterSidebar.scss
@@ -1,9 +1,8 @@
 @import '../../../index.scss';
-$width__sidebar: 300px;
 
 .shop__sidebar {
-  height: calc(100vh - 63.9583px);
-  width: $width__sidebar;
+  width: 100%;
+  max-width: 300px;
 
   .category {
     li {
@@ -36,9 +35,4 @@ $width__sidebar: 300px;
   .active-color {
     color: $sub-main;
   }
-}
-
-.shop__products {
-  width: calc(100% - $width__sidebar);
-  margin-left: calc($width__sidebar + 30px);
 }
