upload profile almost end

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -39,6 +39,9 @@ img {
 }
 
 .loading__color {
+  width: 65px !important;
+  height: 65px !important;
+  line-height: 65px !important;
   fill: $main !important;
 }
 
